--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
     <title>Creature Crafter</title>
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         margin: 0;
         padding: 0;
         background-color: #f5f5f5;
@@ -18,8 +19,6 @@
     <script>
       window.global = window;
       window.process = { env: {}, browser: true };
-      // Buffer polyfill (define as empty for now)
-      window.Buffer = window.Buffer || { isBuffer: () => false };
     </script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
